# ImageManage

./: .gitignore  README.md  directories.db  migrate_database.py  pyproject.toml
.trae/rules/: project_rules.md
backend/: ALBUM_USAGE.md  CLEANUP_SUMMARY.md  api.py  background_scanner.py  container.py  database.py  database_backup.py  directory_utils.py  exceptions.py  fastapi_server.py  image_utils.py  main.py  test_integration.py
backend/db/: __init__.py  album_manager.py  base.py  directory_manager.py  image_manager.py
backend/services/: __init__.py  album_service.py  directory_service.py  favorite_service.py  image_service.py  rating_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: InfoPanel.vue  PhotoGrid.vue  Sidebar.vue
frontend/src/components/InfoPanel/: ImageCard.vue  ImageInfo.vue  ImagePreview.vue  ImageTags.vue  QuickActions.vue
frontend/src/components/PhotoGrid/: InfoBar.vue  PhotoGridView.vue  PhotoToolbar.vue
frontend/src/components/Sidebar/: AlbumSection.vue  LocalDirectorySection.vue  NavigationSection.vue  RecursiveSubDirectory.vue  SettingsSection.vue  SmartCategorySection.vue
frontend/src/config/: api.js
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue
